--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Nesredin</title>
+    <style>
+       .image-preloader{
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       height: 100vh;
+
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="image-preloader"><img src="/logo-removebg-preview.png" width="200px"/></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
